#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT([Encryption.cpp])
AM_INIT_AUTOMAKE(Encryption, 1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([gettimeofday memset pow sqrt])

#AC_CONFIG_FILES([clt13/Makefile
 #                clt13/libaesrand/Makefile])

AC_OUTPUT(Makefile)
